# physiological-report-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/db/: database.py  models.py
app/report_gen/: footer.html  header.html  page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_18_minimal.html  page_19.html  page_2.html  page_20.html  page_20_21_minimal.html  page_21.html  page_2_minimal.html  page_3.html  page_4.html  page_5.html  page_5_minimal.html  page_6.html  page_7.html  page_8.html  page_9.html
app/services/: dynamic_chart_table_generator.py  metrics_calculator.py  spirometry_table_extractor.py  static_chart_generator.py  unified_report_generator.py
app/templates/: base.html  edit.html  preview.html  upload.html
notebooks/: analysis.ipynb  graphs.ipynb  page_context_gen.ipynb  zones.ipynb
notebooks/test_files/: calculations.py  gemini_rer.py  test_page_5_rmr.py  test_page_6_meal_plan.py
